--- a/Injury Data WA/flexdash_injury.Rmd
+++ b/Injury Data WA/flexdash_injury.Rmd
@@ -52,7 +52,7 @@ type[, `SOC2K Description` := soc2k]
 type = type[!is.na(`SOC2K Description`)]
 
 setkey(myvals, type)
-setkey(source, type)
+setkey(source, `SOC2K Description`)
 source = myvals[source]
 source[, `SOC2K Description` := soc2k]
 
@@ -90,7 +90,7 @@ selectInput('ycol', 'Plotting Variable', c("Claims per 100 FT workers",
             selected="Claims per 100 FT workers", multiple = F)
 
 sliderInput("range", "Year:",
-            min = min(rate$year), max = max(rate$year),
+            min = min(rate$year), max = max(rate$year), sep = "",
             step = 1, value = c(min(rate$year), max(rate$year)))
 
 selectInput('group', 'Firm Size', choices = levels(rate$`Firm Size`), 
@@ -356,7 +356,7 @@ sliderInput("topn", "Number of Categories to Display:",
             step = 1, value = 6)
 
 sliderInput("range2", "Year:",
-            min = min(type$year), max = max(type$year),
+            min = min(type$year), max = max(type$year),sep = "",
             step = 1, value = c(min(type$year), max(type$year)))
 
 
@@ -385,7 +385,7 @@ typedata <- reactive({
     newdata = lapply(unique(newdata$`SOC2K Description`), FUN = function(x){
       temp = newdata[`SOC2K Description` %in% x, ][1:input$topn,]
       temp[, `Accident Type` := factor(`Accident Type`, 
-                                              levels = rev(`Accident Type`))] 
+                                              levels = rev(`Accident Type`)), by = `SOC2K Description`] 
       temp
     })
     newdata = rbindlist(newdata)
