--- a/Fatality Data NW/bls_fatality_fdb.Rmd
+++ b/Fatality Data NW/bls_fatality_fdb.Rmd
@@ -31,6 +31,21 @@ if (file.exists(rds_file)) {
 
 df <- df %>% filter(`code` == "GP2AFH")
 
+# Read NAICS codes and set levels based on presence of digits
+naics <- read_csv(here(data_dir, "ind_codes.csv") )
+naics <- naics %>% mutate(level = str_count(code, '\\d')) %>%
+  mutate(level = ifelse(code %in% c("GP2AFH"), 2, level))
+
+# Created nested structure using level
+naics <- naics %>% 
+  mutate(level_1 = ifelse(level == 1, name, NA),
+         level_2 = ifelse(level == 2, name, NA),
+         level_3 = ifelse(level == 3, name, NA),
+         level_4 = ifelse(level == 4, name, NA),
+         level_5 = ifelse(level == 5, name, NA),
+         level_6 = ifelse(level == 6, name, NA)) %>% 
+  fill(starts_with("level_"))
+
 # Find level-1 Characteristics
 Char_1 <- df %>% filter(!is.na(Char_2), is.na(Char_3)) %>% pull(Char_1) %>% 
   unique()
